feat: improve changelog generation and workflow integration
feat:
- Refactored changelog generation to use a GitHub token and support caching.
- Added changelog.txt file generation and refresh logic.

ci:
- Updated GitHub Actions workflows to use write permissions and token environment variables.
- Improved detection of successful publish workflows.

chore:
- Ensured better integration between changelog generation and CI pipelines.